# mod_auth_openid

./: .gitignore  .ruby-gemset  .ruby-version  AUTHORS  COPYING  CVE-2012-2760  CVE-2012-2760.markdown  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  MoidConsumer.cpp  MoidConsumer.h  NEWS  NonceManager.cpp  README  README.markdown  SessionManager.cpp  SessionManager.h  TODO  UPGRADE  _config.yml  aclocal.m4  apache2.gdb  attex.markdown  authuserprogram.markdown  autogen.sh  config.h.in  configure  configure.ac  custompage.markdown  custompage.markup  db_info.cpp  db_info.gdb  dbinfo.markdown  docs.markdown  faq.markdown  http_helpers.cpp  (+13 more)
_layouts/: base.html  post.html
_site/: index.html
acinclude.d/: ac_check_curl.m4  ax_lib_sqlite3.m4  ax_with_apxs.m4
db_abstraction/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  MoidConsumer.cpp  NEWS  README  TODO  autogen.sh  db_info.cpp  mod_auth_openid.cpp  mod_auth_openid.h
db_abstraction/acinclude.d/: ax_path_bdb.m4
db_abstraction/storage/: MoidConsumerBDB.cpp  MoidConsumerSQLite.cpp  NonceManagerSQLite.cpp  SessionManagerBDB.cpp
src/: Dbd.cpp  Dbd.h  Makefile.am  MoidConsumer.cpp  MoidConsumer.h  SessionManager.cpp  SessionManager.h  TestMoidConsumer.cpp  TestPreparedStatements.cpp  TestSessionManager.cpp  cli_common.cpp  cli_common.h  db.h  db_info.cpp  http_helpers.cpp  http_helpers.h  mod_auth_openid.cpp  mod_auth_openid.h  modauthopenid_tables.cpp  moid_utils.cpp  moid_utils.h  test.h  test_mysql.sh  test_runner.cpp  test_sqlite.sh  types.h
storage/: MoidConsumerBDB.cpp  MoidConsumerSQLite.cpp  NonceManagerBDB.cpp  NonceManagerSQLite.cpp  SessionManagerBDB.cpp  SessionManagerSQLite.cpp  sqltest.c  storage.h
